# secure-serialize

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  README.md
secure-serialize/: Cargo.toml
secure-serialize-derive/: Cargo.toml
secure-serialize-derive/src/: lib.rs
secure-serialize/src/: lib.rs
secure-serialize/tests/: basic.rs  configurable_redaction.rs  custom_serialize.rs  debug_and_display.rs  revealed_fields.rs
secure-serialize/tests/ui/: enum_unsupported.rs  enum_unsupported.stderr  unnamed_fields.rs  unnamed_fields.stderr
