[workspace]
members = ["secure-serialize", "secure-serialize-derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/secure-serialize"
documentation = "https://docs.rs/secure-serialize"
homepage = "https://github.com/yourusername/secure-serialize"
keywords = ["serde", "security", "redaction", "serialization"]
categories = ["encoding", "no-std"]
