[package]
name = "secure-serialize"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "A proc-macro for automatically redacting sensitive fields during serialization"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secure-serialize-derive = { version = "0.1", path = "../secure-serialize-derive" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
trybuild = "1"

[lib]
path = "src/lib.rs"
